--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "skoolui",
+  "name": "skoolui-react-web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "axios": "^0.19.0",
+    "cors": "^2.8.5",
+    "formik": "^1.5.1",
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "3.0.1",
+    "register-service-worker": "^1.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -16,16 +21,10 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
